[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "projector_utils"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
dynamic = ["version"]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["mypy", "pyright", "pytest", "pytest-cov"]

[tool.setuptools_scm]
version_file = "projector_utils/_version.py"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]

[tool.coverage.run]
omit = ["test/**", "**/_version.py"]

[tool.mypy]
files = ["projector_utils", "tests"]
strict = true
